// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainAllKeys fails when given object contains all keys 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainAllKeys(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain all keys:
  <green>["b", "a"]</color>
Received:
  <red>["a", "b"]</color>"
`;

exports[`.toContainAllKeys fails when all of the object keys are matched, but there are additional keys  1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAllKeys(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain all keys:
  <green>["a", "c"]</color>
Received:
  <red>["a", "b"]</color>"
`;

exports[`.toContainAllKeys fails when given an empty object 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAllKeys(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain all keys:
  <green>["a"]</color>
Received:
  <red>[]</color>"
`;

exports[`.toContainAllKeys fails when given object does not contain all keys 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAllKeys(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain all keys:
  <green>["a"]</color>
Received:
  <red>["a", "b"]</color>"
`;
